logo and splash screens update, main update

--- a/geostats/src/main/res/values/strings.xml
+++ b/geostats/src/main/res/values/strings.xml
@@ -42,6 +42,7 @@
     <string name="World">World</string>
     <string name="Indicators">Indicators</string>
     <string name="Branches">Branches</string>
+    <string name="Topics">Topics</string>
     <string name="Exit">Exit</string>
     <string name="Continents">Continents</string>
     <string name="About">About</string>
