mountains and dimensions for large layouts

--- a/geostats/src/main/res/values/strings.xml
+++ b/geostats/src/main/res/values/strings.xml
@@ -174,5 +174,7 @@
     <string name="layoutWeightFragmentB">8</string>
     <string name="layoutWeightFragmentALand">1.1</string>
     <string name="layoutWeightFragmentBLand">0.9</string>
+    <string name="layoutWeightFragmentALarge">3</string>
+    <string name="layoutWeightFragmentBLarge">7</string>
     
 </resources>
